feat: add media assets
